//protoc --gofast_out=. --go-grpc_out=. ./rpc/proto/files.proto
syntax = "proto3";

option go_package = "./rpc/proto/filespb";
package filespb;

service FilesSrv {
//  rpc Upload(stream Chunk) returns (UploadStatus) {}
  rpc Add (AddReq) returns (AddResp) {}
}

message Chunk {
  bytes content = 1;
}

message AddReq {
  //文件路径
  string file_path = 1;
}

message AddResp {
  //交易hash
  string address = 1;
}
